Fix z-index, add position: relative to element section-subtitle_theme_dark

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,12 +153,13 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
   color: white;
   margin: 20px auto 40px;
+  position: relative;
+  z-index: 1;
 }
 
 .table {
